[gd_scene load_steps=8 format=3 uid="uid://d1tg3odgc36tb"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Vectors/ElementMorphologyVectorsView.gd" id="1_5hdhx"]
[ext_resource type="Texture2D" uid="uid://c8kk6om0lc4fd" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_S.png" id="2_iw5kc"]
[ext_resource type="Texture2D" uid="uid://dhnp5k27l8p5r" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_C.png" id="3_li0mh"]
[ext_resource type="PackedScene" uid="uid://cujhi16cmpffu" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Scroll/Scroll_Vertical.tscn" id="4_8mw72"]
[ext_resource type="Texture2D" uid="uid://d1ja63xw63so0" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_H.png" id="4_qk7tm"]
[ext_resource type="PackedScene" uid="uid://xyxwcmpgu8a" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Vectors/Prefab_VectorWithDelete.tscn" id="5_dnbvl"]
[ext_resource type="Texture2D" uid="uid://d3ts7d266uamh" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_D.png" id="5_excb5"]

[node name="ElementMorphologyVectorsView" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
offset_right = 102.0
offset_bottom = 240.0
size_flags_horizontal = 3
script = ExtResource("1_5hdhx")

[node name="header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vector Definition:"

[node name="add_vector" type="TextureButton" parent="header"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("2_iw5kc")
texture_pressed = ExtResource("3_li0mh")
texture_hover = ExtResource("4_qk7tm")
texture_disabled = ExtResource("5_excb5")
ignore_texture_size = true
stretch_mode = 0

[node name="Vectors" parent="." node_paths=PackedStringArray("main_window") instance=ExtResource("4_8mw72")]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3
prefab_to_spawn = ExtResource("5_dnbvl")
main_window = NodePath("..")
enable_button_notice_when_list_is_empty = true
button_notice_text = &"   Add a vector   "

[connection signal="pressed" from="header/add_vector" to="." method="add_vector_row"]
[connection signal="internal_add_button_pressed" from="Vectors" to="." method="add_vector_row"]
